--- a/frontend/css/login/style.css
+++ b/frontend/css/login/style.css
@@ -45,6 +45,7 @@ button {
 button[type="submit"] {
   background-color: #007bff;
   color: white;
+  justify-content: center;
 }
 button[type="button"] {
   background-color: #6c757d;
@@ -57,4 +58,9 @@ button:hover {
   margin-top: 15px;
   text-align: center;
   color: #ff0000; /* 에러 메시지 색상 */
+}
+
+.btn-wrapper {
+  display: flex;
+  justify-content: center;
 }
