--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -31,6 +31,9 @@ body {
   cursor: pointer;
   padding: 10px;
   transition: background-color 0.3s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .menu-bar__maker:hover,
@@ -77,4 +80,3 @@ body {
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
-
